@@ -12,11 +12,10 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21</javafx.version>
-        <javafx.path>C:/Users/Usuario/Downloads/openjfx-21.0.10_windows-x64_bin-sdk/javafx-sdk-21.0.10</javafx.path>
     </properties>
 
     <dependencies>
@@ -50,12 +49,6 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.smartfileorganizer.Main</mainClass>
-                    <options>
-                        <option>--module-path</option>
-                        <option>${javafx.path}/lib</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                    </options>
                 </configuration>
             </plugin>
         </plugins>
